--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: fidbek_flutter
 description: Flutter plugin wrapper for Fidbek iOS/Android binary SDKs.
-version: 0.1.0
-homepage: https://fidbek.com
+version: 0.1.1
+homepage: https://fidbek.dev
 repository: https://github.com/Saltware-Tech/fidbek-flutter
 issue_tracker: https://github.com/Saltware-Tech/fidbek-flutter/issues
 
